# eleborato-A-star

./: CMakeLists.txt  MapSearchNode.cpp  MapSearchNode.h  Mappa.cpp  Mappa.h  Obiettivo.cpp  Obiettivo.h  Personaggio.cpp  Personaggio.h  Punto.cpp  Punto.h  Schermo.cpp  Schermo.h  fsa.h  main.cpp  stlastar.h
Mappe/: a.txt  b.txt  c.txt
test/: CMakeLists.txt  Test.cpp  runAllTests.cpp
